# memory-vault

./: Dockerfile  Dockerfile.mcp  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  release.yml  test.yml
migrations/: 004_entity_name_dedup.sql
src/extraction/: graph_writer.py  spacy_extractor.py
web/: package-lock.json  package.json
