[project]
name = "memory-vault"
version = "0.4.0"
description = "Local-first AI memory system with hybrid search — PostgreSQL + pgvector"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MihaiBuilds" },
]
keywords = ["ai", "memory", "vector-search", "postgresql", "pgvector", "mcp"]

dependencies = [
    "psycopg[binary]>=3.3.4,<4",
    "psycopg-pool>=3.1,<4",
    "sentence-transformers>=5.5.0,<6",
    "numpy>=2.4.5",
    "python-dotenv>=1.2.2",
    "mcp>=1.27.1",
    "fastapi>=0.136.1,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.29",
    "pydantic>=2.5,<3",
    "spacy>=3.7,<4",
    "structlog>=24.1,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["web", "content", "logs", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-length handled by formatter; soft-wrap is fine
    "B008",  # FastAPI's Depends()/File()/Form() in defaults is the documented pattern
]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
memory-vault = "src.cli:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
